--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": "14.x"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "quickmongo": "^5.2.0"
